alterando layout do site

--- a/parte_1/index.html
+++ b/parte_1/index.html
@@ -1,12 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Valorant - Meu Game Favorito</title>
+    <link rel="stylesheet" href="main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chango&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <header>
+        <div class="container">
+            <img class="#" src="#" alt="Valorant">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">Sobre o jogo</a>
+                    </li>
+                    <li>
+                        <a href="#photos">Imagens do jogo</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Fale conosco</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section id="about">
+        <div class="container">
+            <img class="store-front" src="/imagens/o melhor.jpg" alt="Imagem do game">
+            <div class="about">
+                <h2>Sobre o jogo</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis exercitationem praesentium
+                    accusantium architecto facilis, facere natus
+                    dolores culpa recusandae quia aperiam in dicta. Libero minus, harum fugit itaque explicabo tempora?
+                </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt a ullam doloremque alias voluptatibus
+                    ratione odio, fuga, molestias
+                    repudiandae cupiditate, officia quos expedita autem? Ipsum sequi corporis fuga blanditiis aliquam!
+                </p>
+                <ul class="brands-list">
+                    <li> <img src="https://i.pinimg.com/originals/7f/c6/67/7fc6672ddb99cac9c038efcb5f502a76.png"
+                            alt="Platstation">Playstation </li>
+                    <li><img src="https://www.freepnglogos.com/uploads/xbox-games-logo-symbol-19.png" alt="Xbox"> Xbox
+                    </li>
+                    <li><img src="https://cdn-icons-png.flaticon.com/512/73/73443.png" alt="Pc"> Pc</li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div class="images">
+                <h2>Imagens do Jogo</h2>
+                <ul>
+                    <li><img src="#" alt="Valorant"> </li>
+                    <li><img src="#" alt="Valorant"> </li>
+                    <li><img src="#" alt="Valorant"> </li>
+                    <li><img src="#" alt="Valorant"> </li>
+                    <li><img src="#" alt="Valorant"> </li>
+                    <li><img src="#" alt="Valorant"> </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <h2>Contatos</h2>
+            <div class="contact-methods">
+                <div>
+                    <h3>Fale conosco</h3>
+                    <form>
+                        <input type="text" placeholder="Seu nome" required />
+                        <input type="email" placeholder="Seu e-mail" required />
+                        <input type="tel" placeholder="Seu telefone (opicional)" />
+                        <textarea placeholder="Sua mensagem" required></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+                <div>
+                    <h3>Nossas redes sociais</h3>
+                    <ul class="social-links">
+                        <li>
+                            <a href="#" title="Siga-nos no Instagram">
+                                <img src="#" alt="Logo do Instagram">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Acompanhe nosso Facebook">
+                                <img src="#" alt="Logo do Facebook">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" title="Inscreva-se no Canal do Youtube">
+                                <img src="#" alt="Logo do Youtube">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Venha nos conhecer</h3>
+                    <p>
+                        Rua: São José nº 294 - Bairro: São Caetano - Itabuna - Ba
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="contaier">
+            <p> &copy; 2023 - Todos os direitos reservados</p>
+        </div>
+    </footer>
 </body>
+
 </html>
