--- a/parte_1/index.html
+++ b/parte_1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorant - Meu Game Favorito</title>
+    <title>O melhor do mundo</title>
     <link rel="stylesheet" href="main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,17 +25,17 @@
 <body>
     <header>
         <div class="container">
-            <img class="#" src="#" alt="Valorant">
+            <img class="#" src="#" alt="Cristiano Ronaldo">
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">Sobre o jogo</a>
+                        <a href="#about">Minha história</a>
                     </li>
                     <li>
-                        <a href="#photos">Imagens do jogo</a>
+                        <a href="#photos">Quando tive caspa</a>
                     </li>
                     <li>
-                        <a href="#contact">Fale conosco</a>
+                        <a href="#contact">porque eu sou lindo?</a>
                     </li>
                 </ul>
             </nav>
@@ -45,21 +45,13 @@
         <div class="container">
             <img class="store-front" src="/imagens/o melhor.jpg" alt="Imagem do game">
             <div class="about">
-                <h2>Sobre o jogo</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis exercitationem praesentium
-                    accusantium architecto facilis, facere natus
-                    dolores culpa recusandae quia aperiam in dicta. Libero minus, harum fugit itaque explicabo tempora?
-                </p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt a ullam doloremque alias voluptatibus
-                    ratione odio, fuga, molestias
-                    repudiandae cupiditate, officia quos expedita autem? Ipsum sequi corporis fuga blanditiis aliquam!
+                <h2>Sou lindo</h2>
+
+                <p>
+                    Desde que comecei a usar clear man minhas caspas sumiram
                 </p>
                 <ul class="brands-list">
-                    <li> <img src="https://i.pinimg.com/originals/7f/c6/67/7fc6672ddb99cac9c038efcb5f502a76.png"
-                            alt="Platstation">Playstation </li>
-                    <li><img src="https://www.freepnglogos.com/uploads/xbox-games-logo-symbol-19.png" alt="Xbox"> Xbox
-                    </li>
-                    <li><img src="https://cdn-icons-png.flaticon.com/512/73/73443.png" alt="Pc"> Pc</li>
+
                 </ul>
             </div>
         </div>
@@ -97,6 +89,7 @@
                         <li>
                             <a href="#" title="Siga-nos no Instagram">
                                 <img src="#" alt="Logo do Instagram">
+                                <img src="/imagens/o melhor.jpg0" alt="">
                             </a>
                         </li>
                         <li>
