começando site do zero

--- a/parte_1/index.html
+++ b/parte_1/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="container">
-            <img class="#" src="#" alt="Cristiano Ronaldo">
+            <img class="#" src="../imagens/o melhor.jpg" width="300px" alt="Cristiano Ronaldo">
             <nav>
                 <ul>
                     <li>
